--- a/demo/index.html
+++ b/demo/index.html
@@ -24,6 +24,18 @@
     <script src="../dist/index.umd.js"></script>
     <script>
       window.onload = () => {
+        // new WaterMark({
+          // target: document.getElementById("hello_world"),
+          // target: document.getElementById('demo-image'),
+          // text: "Internal Data",
+          // fontSize: 60,
+          // image: "./glass15-wm.png",
+          // imageWidth: 50,
+          // imageHeight: 20,
+          // cSpace: 50,
+          // vSpace: 100,
+          // position: 'topLeft'
+        // })
         // WaterMark.page({
         //   containerEl: document.body,
         //   text: "Internal Data",
