feat: err version temp

--- a/demo/index.html
+++ b/demo/index.html
@@ -24,6 +24,10 @@
     <script src="../dist/index.umd.js"></script>
     <script>
       window.onload = () => {
+        // WaterMark.init({
+        //   target: document.body,
+        //   image: "./glass15-wm.png",
+        // })
         // new WaterMark({
           // target: document.getElementById("hello_world"),
           // target: document.getElementById('demo-image'),
